[package]
name = "fuzig-csi"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.8", features = ["derive"] }
tokio-stream = { version = "0.1.15", features = ["net"] }

[build-dependencies]
tonic-build = "0.11"
