[package]
name = "fuzig-csi"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
tower-http = { version = "0.4", features = ["trace"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
clap = { version = "4.5.8", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.11"
